src/test/deca/context/invalid/02Protected.deca
class A {
    protected int slt = 12; 

}

{
    A a = new A() ;
    println(a.slt);

    if (!(a.slt || true) ){
        println("true"); 
    }
    else{
        println("false"); 
    }
}
